changes to interface files

--- a/src/interface/input.in
+++ b/src/interface/input.in
@@ -10,6 +10,6 @@ default_sigma_star = 0
 END_DEFAULTS
 
 START_GEOMETRY
-EPS LINE LESS 1 2 3
-MU CIRCLE GREATER 5 4 3
+EPS 12.0  LINE LESS 1 1 1
+MU 4.0 CIRCLE GREATER 5 4 3
 END_GEOMETRY
