--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 CC = nvcc
-OBJECTS = fdtd.o drude_mode.o tm_mode.o kernels.o pml_mode.o common_functions.o
+OBJECTS = fdtd.o drude_mode.o tm_mode.o kernels.o pml_mode.o common_functions.o h5save.o
 FINAL = fdtd
-LDFLAGS = -lglut -lGL -lpthread
+LDFLAGS = -lglut -lGL -lpthread -lhdf5
 
 
 all : $(FINAL)
