Options included for anim and hdf5

--- a/src/interface/coupler.cfg
+++ b/src/interface/coupler.cfg
@@ -1,5 +1,6 @@
 name = 'coupler' #Name of the simulation. Used for saving files.
 type = 1 # 0 - TM mode, 1- TM mode with PML, 2 - Drude media
+output_type = 0 # 0 - animation, 1 - hdf5 files
 xdim = 1024
 ydim = 1024
 pml_width = 50 #width of the pml
